@@ -1,5 +1,10 @@
 2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/err.h (grub_err_t): Replace GRUB_ERR_BAD_GZIP_DATA with
+	GRUB_ERR_BAD_COMPRESSED_DATA. All users updated.
+
+2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Uncompressed checksum support.
 
 	* grub-core/commands/hashsum.c (options): Add option --uncompress.
